Fix broken image and urls

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/queries.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="build/assets/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="build/assets/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="build/assets/favicons/favicon-16x16.png">
-    <link rel="manifest" href="build/assets/favicons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicons/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
@@ -23,8 +23,8 @@
 <header>
     <nav>
         <div class="content-wrapper">
-            <img class="logo" src="build/assets/logo-white.png" alt="Happy Brews White Logo" />
-            <img class="logo-black" src="build/assets/logo.png" alt="Happy Brews Black Logo" />
+            <img class="logo" src="assets/logo-white.png" alt="Happy Brews White Logo" />
+            <img class="logo-black" src="assets/logo.png" alt="Happy Brews Black Logo" />
             <ul class="nav-items js--main-nav">
                 <li><a href="#features">About Us</a>
                 </li>
@@ -73,44 +73,44 @@
     <ul class="meals-showcase">
         <li>
             <figure class="meal-photo">
-                <img src="build/assets/1.jpg" alt="Korean bibimbap with egg and vegetables">
+                <img src="assets/1.jpg" alt="Korean bibimbap with egg and vegetables">
             </figure>
         </li>
         <li>
             <figure class="meal-photo">
-                <img src="build/assets/2.jpg" alt="Simple italian pizza with cherry tomatoes">
+                <img src="assets/2.jpg" alt="Simple italian pizza with cherry tomatoes">
             </figure>
         </li>
         <li>
             <figure class="meal-photo">
-                <img src="build/assets/3.jpg" alt="Chicken breast steak with vegetables ">
+                <img src="assets/3.jpg" alt="Chicken breast steak with vegetables ">
             </figure>
         </li>
         <li>
             <figure class="meal-photo">
-                <img src="build/assets/4.jpg" alt="Autumn pumpkin soup">
+                <img src="assets/4.jpg" alt="Autumn pumpkin soup">
             </figure>
         </li>
     </ul>
     <ul class="meals-showcase">
         <li>
             <figure class="meal-photo">
-                <img src="build/assets/5.jpg" alt="Paleo beef steak with vegetables">
+                <img src="assets/5.jpg" alt="Paleo beef steak with vegetables">
             </figure>
         </li>
         <li>
             <figure class="meal-photo">
-                <img src="build/assets/6.jpg" alt="Healthy baguette with egg and vegetables">
+                <img src="assets/6.jpg" alt="Healthy baguette with egg and vegetables">
             </figure>
         </li>
         <li>
             <figure class="meal-photo">
-                <img src="build/assets/7.jpg" alt="Burger with cheddar and bacon">
+                <img src="assets/7.jpg" alt="Burger with cheddar and bacon">
             </figure>
         </li>
         <li>
             <figure class="meal-photo">
-                <img src="build/assets/8.jpg" alt="Granola with cherries and strawberries">
+                <img src="assets/8.jpg" alt="Granola with cherries and strawberries">
             </figure>
         </li>
     </ul>
@@ -121,7 +121,7 @@
     </div>
     <div class="row">
         <div class="col span-1-of-2 steps-col">
-            <img src="build/assets/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen js--wp-3">
+            <img src="assets/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen js--wp-3">
         </div>
         <div class="col span-1-of-2 steps-col">
             <div class="works-step">
@@ -137,10 +137,10 @@
                 <p>Skip the line and enjoy your brew in less then 20 minutes.</p>
             </div>
             <a href="#" class="btn-app">
-                <img src="build/assets/download-app.svg" alt="App Store Nutton">
+                <img src="assets/download-app.svg" alt="App Store Nutton">
             </a>
             <a href="#" class="btn-app">
-                <img src="build/assets/download-app-android.png" alt="App Store Nutton">
+                <img src="assets/download-app-android.png" alt="App Store Nutton">
             </a>
         </div>
     </div>
@@ -151,19 +151,19 @@
     </div>
     <div class="row js--wp-3">
         <div class="col span-1-of-4 span-content">
-            <img src="build/assets/calgary.jpg" alt="Calgary">
+            <img src="assets/calgary.jpg" alt="Calgary">
             <h3>Calgary</h3>
         </div>
         <div class="col span-1-of-4 span-content">
-            <img src="build/assets/vancouver.jpg" alt="Vancouver">
+            <img src="assets/vancouver.jpg" alt="Vancouver">
             <h3>Vancouver</h3>
         </div>
         <div class="col span-1-of-4 span-content">
-            <img src="build/assets/toronto.jpg" alt="Toronto">
+            <img src="assets/toronto.jpg" alt="Toronto">
             <h3>Toronto</h3>
         </div>
         <div class="col span-1-of-4 span-content">
-            <img src="build/assets/montreal.jpg" alt="Montreal">
+            <img src="assets/montreal.jpg" alt="Montreal">
             <h3>Montreal</h3>
         </div>
     </div>
@@ -174,15 +174,15 @@
     </div>
     <div class="row">
         <div class="col span-1-of-3">
-            <blockquote>We tried coffee roasters from all over the US, and nothing beats Happy Brews quality and taste. Their assistance with equipment choices, employee training, brew recipes and general coffee education gave us the foundation we needed to provide our community with delicious coffee that is responsibly and sustainably sourced. Ordering coffee is easy, roasted fresh and still manages to ship amazingly fast <cite><img src="build/assets/customer-1.jpg" alt="Jarod Lacey">Jarod Lacey</cite>
+            <blockquote>We tried coffee roasters from all over the US, and nothing beats Happy Brews quality and taste. Their assistance with equipment choices, employee training, brew recipes and general coffee education gave us the foundation we needed to provide our community with delicious coffee that is responsibly and sustainably sourced. Ordering coffee is easy, roasted fresh and still manages to ship amazingly fast <cite><img src="assets/customer-1.jpg" alt="Jarod Lacey">Jarod Lacey</cite>
             </blockquote>
         </div>
         <div class="col span-1-of-3">
-            <blockquote>Excellent customer service and great coffee they will go the extra mile for you. Their coffee is higher quality than other vendors. I would recommend this place if you love good service and coffee!!! <cite><img src="build/assets/customer-2.jpg" alt="Hermione Sutton">Hermione Sutton</cite>
+            <blockquote>Excellent customer service and great coffee they will go the extra mile for you. Their coffee is higher quality than other vendors. I would recommend this place if you love good service and coffee!!! <cite><img src="assets/customer-2.jpg" alt="Hermione Sutton">Hermione Sutton</cite>
             </blockquote>
         </div>
         <div class="col span-1-of-3">
-            <blockquote>Our customers love Happy Brews and we do too! Happy Brews fuels our customers and our staff! <cite><img src="build/assets/customer-3.jpg" alt="Aliesha Bullock">Aliesha Bullock</cite>
+            <blockquote>Our customers love Happy Brews and we do too! Happy Brews fuels our customers and our staff! <cite><img src="assets/customer-3.jpg" alt="Aliesha Bullock">Aliesha Bullock</cite>
             </blockquote>
         </div>
     </div>
@@ -283,7 +283,6 @@
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-<script src="build/js/scripts.js"></script>
 </body>
-
+<script src="js/scripts.js"></script>
 </html>
